# pico-freertos-simplest

./: .envrc-sample  .gitignore  CMakeLists.txt
common/: Task.cpp  Task.h  log.h
hello_rtos/: CMakeLists.txt  hello_rtos.c
hello_usb/: CMakeLists.txt
scripts/: buildme  buildp  common.sh  go  gosho  sho
test_task/: CMakeLists.txt  test_task.cpp
